testsuite/tests/parser/should_fail/T15730b.stderr

T15730b.hs:8:48: error: parse error on input ‘::’
